src/objects/FogBugz_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <fields>
        <fullName>Default_Opportunity_Owner__c</fullName>
        <description>This is the User Name (not Email) of the default SF owner for new cases created in FB, owned by users that do not exist in SF</description>
        <label>Default Opportunity Owner</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Last_Time_Sync_Ran__c</fullName>
        <label>Last Time Sync Ran</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Sync_Filter__c</fullName>
        <label>Sync Filter</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sync_Script_Running__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sync Script Running</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Token__c</fullName>
        <label>Token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>FogBugz Settings</label>
</CustomObject>